@@ -207,3 +207,4 @@
 	* Added snprintf()
 	* Added send() and sendto(); integrate write() and close() with socket descriptors.
         * Added recv() and recvfrom().
+	* Added getsockopt() and setsockopt()
